--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Baking app</string>
+    <string name="ingredients_title">Ingredients</string>
+    <string name="recipe_steps_title">Recipe Steps</string>
+    <string name="recipe_image_preview">Recipe image preview</string>
 </resources>
