--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="add_widget">Add widget</string>
     <string name="menu_settings_title">Settings</string>
     <string name="recipe_widget_settings_title">Recipe Widget Settings</string>
+    <string name="no_connectivity_exception_message">No connectivity. Please make sure that your network is turned on.</string>
 </resources>
